add simple form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
 
    	<%= render 'layouts/header' %>
 
-    <%= yield %>
+    <div class="pages-container">
+    	<%= yield %>
+    </div>
+
   </body>
 </html>
