--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(customer, :html => {:class => "form-horizontal center"}) do |f| %>
+<%= simple_form_for @customer, html: {class: 'form-horizontal' } do |f| %>
   <% if customer.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(customer.errors.count, "error") %> prohibited this customer from being saved:</h2>
@@ -11,22 +11,22 @@
     </div>
   <% end %>
 
-  <div class="field form-group">
-    <%= f.label :name %>
-    <%= f.text_field :name, :class => "form-control", :placeholder => "Name" %>
+  <div class="form-group">
+    
+    <%= f.input :name, label: 'Name  ', placeholder: 'Company Name'%>
   </div>
 
   <div class="field">
-    <%= f.label :contact %>
-    <%= f.text_field :contact %>
+    
+    <%= f.input :contact, label: "Contact  ", placeholder: 'Contact in charge' %>
   </div>
 
   <div class="field">
-    <%= f.label :email %>
-    <%= f.text_field :email %>
+   
+    <%= f.input :email, label: "Email  ", placeholder: 'Contact Email' %>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.button :submit, class: 'btn btn-primary' %>
   </div>
 <% end %>
