--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,1 +1,43 @@
-<p><%= link_to "Home", root_path %>   <%= link_to "About", 'pages/about' %>   <%= link_to "Se connecter", "#" %> <%= link_to "Customers", '/customers' %> <%= link_to 'Products', '/products'%></p>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to 'CPM', root_path, class: 'navbar-brand'%>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+      	<% if user_signed_in? %>
+	        <li><%= link_to "Home", root_path %></li>
+	        <li><%= link_to "About", 'pages/about' %></li>
+	        <li><%= link_to "Customers", '/customers' %></li>
+	        <li><%= link_to 'Products', '/products'%></li>
+		<% else %>
+			<li><%= link_to "Home", root_path %></li>
+			<li><%= link_to "About", 'pages/about' %></li>
+		<% end %>
+      </ul>
+      <form class="navbar-form navbar-left">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+      	<% if user_signed_in? %>
+        <li><%= link_to "Se deconnecter", destroy_user_session_path, method: :delete %></li>
+        <li><%= link_to "Editer son profile", edit_user_registration_path %></li>
+        <% else %>
+        <li><%= link_to "Se connecter", new_user_session_path %></li>
+        <% end %>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
