--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,7 +33,7 @@
       <ul class="nav navbar-nav navbar-right">
       	<% if user_signed_in? %>
         <li><%= link_to "Se deconnecter", destroy_user_session_path, method: :delete %></li>
-        <li><%= link_to "Editer son profile", edit_user_registration_path %></li>
+        <li><%= link_to "Editer son profil", edit_user_registration_path %></li>
         <% else %>
         <li><%= link_to "Se connecter", new_user_session_path %></li>
         <% end %>
