--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(product) do |f| %>
+<%= simple_form_for(product) do |f| %>
   <% if product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -12,8 +12,10 @@
   <% end %>
 
  <div class="field">
-    <%= f.label :customer_id %>
-    <%= f.collection_select :customer_id, Customer.order(:name),:id,:name, include_blank: true %>
+  <!--
+  <%= f.collection_select :customer_id, Customer.order(:name),:id,:name, include_blank: true %>
+  -->
+  <%= f.input :customer_id, collection: Customer.order(:name), label: "Customer " %>
   </div>
 
   <div class="field">
@@ -22,8 +24,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :producttype %>
-    <%= f.text_field :producttype %>
+    <%= f.input :producttype, label: "Product Type " %>
   </div>
 
   <div class="field">
@@ -52,8 +53,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :sladate %>
-    <%= f.text_field :sladate %>
+    <%= f.input :sladate, as: :date, label: "SLA Date" %>
   </div>
 
   <div class="field">
@@ -72,8 +72,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :host %>
-    <%= f.text_field :host %>
+    <%= f.input :host, lable: "Host ", collection: Product::HOST, prompt: "select host type" %>
   </div>
 
   <div class="field">
@@ -82,6 +81,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.button :submit, class: "btn btn-warning" %>
   </div>
 <% end %>
